--- a/slingclipse-plugin/build.properties
+++ b/slingclipse-plugin/build.properties
@@ -2,7 +2,8 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               OSGI-INF/
+               OSGI-INF/,\
+               .options
 jars.compile.order = .,\
                      commons-httpclient.jar
 source.. = src/
