SLING-2656 Add tenant module to reactor
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1407677 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -97,6 +97,7 @@
           <module>extensions/mongodb</module>
           <module>extensions/reqanalyzer</module>
           <module>extensions/rewriter</module>
+          <module>extensions/tenant</module>
           <module>jcr/jackrabbit-client</module>
           <module>jcr/compiler</module>
           <module>jcr/prefs</module>
