--- a/bundles/extensions/bundleresource/pom.xml
+++ b/bundles/extensions/bundleresource/pom.xml
@@ -28,7 +28,7 @@
 
     <artifactId>org.apache.sling.bundleresource.impl</artifactId>
     <packaging>bundle</packaging>
-    <version>2.0.7-SNAPSHOT</version>
+    <version>2.1.0</version>
 
     <name>Apache Sling Bundle Resource Provider</name>
     <description>
@@ -38,13 +38,13 @@
 
     <scm>
         <connection>
-            scm:svn:http://svn.apache.org/repos/asf/sling/trunk/bundles/extensions/bundleresource
+            scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.bundleresource.impl-2.1.0
         </connection>
         <developerConnection>
-            scm:svn:https://svn.apache.org/repos/asf/sling/trunk/bundles/extensions/bundleresource
+            scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.bundleresource.impl-2.1.0
         </developerConnection>
         <url>
-            http://svn.apache.org/viewvc/sling/trunk/bundles/extensions/bundleresource
+            http://svn.apache.org/viewvc/sling/tags/org.apache.sling.bundleresource.impl-2.1.0
         </url>
     </scm>
 
