--- a/bundles/servlets/resolver/pom.xml
+++ b/bundles/servlets/resolver/pom.xml
@@ -78,7 +78,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.api</artifactId>
-            <version>2.3.0</version>
+            <version>2.3.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -121,7 +121,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.commons.testing</artifactId>
-            <version>2.0.12</version>
+            <version>2.0.13-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
