SLING-2665 - allow the default redirect status code to be configured
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1409439 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/resourceresolver/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/bundles/resourceresolver/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -77,3 +77,8 @@ resource.resolver.required.providers.description = A resource resolver factory i
  available (registered) if all resource providers mentioned in this configuration \
  are available. Each entry is either a service PID or a filter expression. \
  Invalid filters are ignored.
+
+resource.resolver.default.vanity.redirect.status.name = Default Vanity Path Redirect Status
+resource.resolver.default.vanity.redirect.status.description = The default status code \
+ used when a sling:vanityPath is configured to redirect and does not have a specific \
+ status code associated with it (via a sling:redirectStatus property)
