--- a/maven/maven-launchpad-plugin/pom.xml
+++ b/maven/maven-launchpad-plugin/pom.xml
@@ -148,6 +148,11 @@
             <version>1.5.15</version>
         </dependency>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
             <groupId>org.jdom</groupId>
             <artifactId>jdom</artifactId>
             <version>1.1</version>
