--- a/contrib/scripting/freemarker/pom.xml
+++ b/contrib/scripting/freemarker/pom.xml
@@ -146,7 +146,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.commons.testing</artifactId>
-            <version>2.0.6</version>
+            <version>2.0.4-incubator</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
