--- a/installer/core/pom.xml
+++ b/installer/core/pom.xml
@@ -140,7 +140,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.commons.osgi</artifactId>
-            <version>2.2.1-SNAPSHOT</version>
+            <version>2.2.0</version>
             <scope>provided</scope>
         </dependency>
       <!-- We use a class from the config admin implementation to read config files -->
