--- a/pom.xml
+++ b/pom.xml
@@ -28,16 +28,16 @@
     </parent>
 
     <artifactId>org.apache.sling.scripting.jsp</artifactId>
-    <version>2.0.26</version>
+    <version>2.0.27-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <name>Apache Sling Scripting JSP Support</name>
     <description>Support for JSP scripting</description>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.scripting.jsp-2.0.26</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.scripting.jsp-2.0.26</developerConnection>
-        <url>http://svn.apache.org/viewvc/sling/tags/org.apache.sling.scripting.jsp-2.0.26</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/bundles/scripting/jsp</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/bundles/scripting/jsp</developerConnection>
+        <url>http://svn.apache.org/viewvc/sling/trunk/bundles/scripting/jsp</url>
     </scm>
 
     <build>
