SLING-2680 - [Tooling] Usability improvements for the Slingclipse import wizard. Applied patch from Robert Munteanu. Thanks!!
git-svn-id: https://svn.apache.org/repos/asf/sling/whiteboard/asanso/plugins/eclipse@1415704 13f79535-47bb-0310-9956-ffa450edef68

--- a/slingclipse-plugin/plugin.xml
+++ b/slingclipse-plugin/plugin.xml
@@ -27,9 +27,9 @@
       <wizard
             category="org.apache.sling.slingclipse.ui.wizards.sampleCategory"
             class="org.apache.sling.slingclipse.ui.wizards.ImportWizard"
-            icon="icons/sample.gif"
+            icon="src/org/apache/sling/slingclipse/images/sling-logo.png"
             id="org.apache.sling.slingclipse.ui.wizards.ImportWizard"
-            name="Import from Repository">
+            name="Import from Sling Repository">
          <description>
             Import a file from the local file system into the workspace.
          </description>
