Fix build by adding dependency to annotations.
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1438397 13f79535-47bb-0310-9956-ffa450edef68

--- a/launchpad/integration-tests/pom.xml
+++ b/launchpad/integration-tests/pom.xml
@@ -107,6 +107,10 @@
   </profiles>
 
   <dependencies>
+    <dependency>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>org.apache.felix.scr.annotations</artifactId>
+    </dependency>
 
 
     <!--  for DavExIntegrationTest -->
