--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,10 @@
   </profiles>
 
   <dependencies>
+    <dependency>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>org.apache.felix.scr.annotations</artifactId>
+    </dependency>
 
 
     <!--  for DavExIntegrationTest -->
