--- a/launchpad/testing/pom.xml
+++ b/launchpad/testing/pom.xml
@@ -499,7 +499,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.commons.testing</artifactId>
-            <version>2.0.10</version>
+            <version>2.0.13-SNAPSHOT</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
