--- a/pom.xml
+++ b/pom.xml
@@ -169,5 +169,11 @@
             <version>3.0.8</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>org.mockito</groupId>
+        	<artifactId>mockito-all</artifactId>
+        	<version>1.9.5</version>
+        	<scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
