--- a/testing/samples/integration-tests/pom.xml
+++ b/testing/samples/integration-tests/pom.xml
@@ -65,6 +65,12 @@
         
          <!-- Set this to run tests against a specific hostname, if test.server.url is not set-->
          <test.server.hostname />
+
+        <!-- Set this to use a different username for remote execution of sling junit tests -->
+        <test.server.username />
+
+        <!-- Set this to use a different password for remote execution of sling junit tests -->
+        <test.server.password />
         
         <!-- Options for the VM that executes our runnable jar -->
         <jar.executor.vm.options>-Xmx512m</jar.executor.vm.options>
@@ -199,6 +205,8 @@
                     <systemPropertyVariables>
                         <test.server.url>${test.server.url}</test.server.url>
                         <test.server.hostname>${test.server.hostname}</test.server.hostname>
+                        <test.server.username>${test.server.username}</test.server.username>
+                        <test.server.password>${test.server.password}</test.server.password>
                         <jar.executor.server.port>${http.port}</jar.executor.server.port>
                         <jar.executor.vm.options>${jar.executor.vm.options}</jar.executor.vm.options>
                         <jar.executor.jar.folder>${project.basedir}/target/dependency</jar.executor.jar.folder>
