--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
     <artifactId>org.apache.sling.commons.testing</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.13-SNAPSHOT</version>
+    <version>2.0.14</version>
 
     <name>Apache Sling Testing Utilities</name>
     <description>
@@ -38,13 +38,13 @@
 
     <scm>
         <connection>
-            scm:svn:http://svn.apache.org/repos/asf/sling/trunk/bundles/commons/testing
+            scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.commons.testing-2.0.14
         </connection>
         <developerConnection>
-            scm:svn:https://svn.apache.org/repos/asf/sling/trunk/bundles/commons/testing
+            scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.commons.testing-2.0.14
         </developerConnection>
         <url>
-            http://svn.apache.org/viewvc/sling/trunk/bundles/commons/testing
+            http://svn.apache.org/viewvc/sling/tags/org.apache.sling.commons.testing-2.0.14
         </url>
     </scm>
 
