--- a/testing/junit/scriptable/pom.xml
+++ b/testing/junit/scriptable/pom.xml
@@ -108,7 +108,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.junit.core</artifactId>
-            <version>1.0.7-SNAPSHOT</version>
+            <version>1.0.8</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
