SLING-2742 Adds RepositoryStatisticsMBean which wrapps the RespositoryStatistics from Jackrabbit in an MBean.
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1450019 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/jcr/jackrabbit-server/pom.xml
+++ b/bundles/jcr/jackrabbit-server/pom.xml
@@ -95,6 +95,7 @@
                         </Bundle-Activator>
                         <Export-Package>
                              org.apache.sling.jcr.jackrabbit.server;version=2.1.0,
+                             org.apache.sling.jcr.jackrabbit.server.jmx;version=1.0.0,
                              org.apache.sling.jcr.jackrabbit.server.security;version=2.0.4-incubator,
                              org.apache.sling.jcr.jackrabbit.server.security.accessmanager;version=2.1.0,
                              org.apache.jackrabbit.core.security.principal;version=2.2.5
