[maven-release-plugin] prepare for next development iteration
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1450706 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/scripting/script-console/pom.xml
+++ b/contrib/scripting/script-console/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.scripting.console</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <name>Apache Sling Script Console</name>
@@ -36,13 +36,13 @@
 
     <scm>
         <connection>
-            scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.scripting.console-1.0.0
+            scm:svn:http://svn.apache.org/repos/asf/sling/trunk/contrib/scripting/script-console
         </connection>
         <developerConnection>
-            scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.scripting.console-1.0.0
+            scm:svn:https://svn.apache.org/repos/asf/sling/trunk/contrib/scripting/script-console
         </developerConnection>
         <url>
-            http://svn.apache.org/viewvc/sling/tags/org.apache.sling.scripting.console-1.0.0
+            http://svn.apache.org/viewvc/sling/trunk/contrib/scripting/script-console
         </url>
     </scm>
 
