SLING-2769 - relax java.jcr import package version so that sample works on sling launchpad 6
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1452252 13f79535-47bb-0310-9956-ffa450edef68

--- a/samples/post-servlet-extensions/pom.xml
+++ b/samples/post-servlet-extensions/pom.xml
@@ -54,6 +54,10 @@
                         <Private-Package>
                             org.apache.sling.samples.postservletextensions.internal
                         </Private-Package>
+                        <Import-Package>
+                            javax.jcr.*;version=1.0,
+                            *
+                        </Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
