SLING-2808 - test packages exported from a fragment bundle, disabled for now
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1463585 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,7 @@
             <modules>
                 <module>launchpad/test-services</module>
                 <module>launchpad/test-services-war</module>
+                <module>launchpad/test-fragment</module>
                 <module>launchpad/test-bundles</module>
                 <module>launchpad/integration-tests</module>
                 <module>launchpad/testing</module>
