SLING-2823 Move Sling based FTP Server to contrib
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1467961 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -91,6 +91,7 @@
           <module>extensions/discovery/api</module>
           <module>extensions/dojo</module>
           <module>extensions/dojo-sling</module>
+          <module>extensions/ftpserver</module>
           <module>extensions/gwt/sample</module>
           <module>extensions/gwt/servlet</module>
           <module>extensions/i18n</module>
