SLING-2822 - add junit rules to execute server-side JUnit tests
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1468044 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/muppet/pom.xml
+++ b/contrib/extensions/muppet/pom.xml
@@ -29,6 +29,7 @@
         <module>muppet-core</module>
         <module>muppet-rules</module>
         <module>muppet-sling</module>
+        <module>sling-demo</module>
         <module>it</module>
     </modules>
 </project>
