Add new testing module for easy mocking of a resource resolver
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1468784 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,7 @@
         <module>testing/junit/core</module>
         <module>testing/junit/scriptable</module>
         <module>testing/junit/remote</module>
+        <module>testing/resourceresolver-mock</module>
         
         <!-- Installer -->
         <module>installer/api</module>
